== Version 2.0.20 Work in progress (not released -- this is a draft) ==

  User side :
  -----------
    # Apps:
        * Emails :
            - These fields of 'EmailTemplate' cannot be inner-edited anymore: 'body', 'body_html'.


== Version 2.0.19 ==

  User side :
  -----------
    # Apps:
        * Projects :
            - The field 'Project.effective_end_date' cannot be inner-edited anymore (use the button 'Close the project').
            - In the forms for 'AbstractProject', the fields "start_date" & "end_date" are not required any more.
            - The button "Back to the project" has been fixed.
            - The display of the hourly cost in the Resources' brick has been fixed.
        * SMS:
            - The field 'MessagingList.contacts' cannot be inner-edited anymore.


== Version 2.0.18 ==

  User side :
  -----------
    # Apps:
        * Billing :
            - The LateX templates have been fixed : the settlement terms is now used correctly.
            - In the block "Payments information", the button to select an account is always displayed when no account is selected.
        * SMS :
            - Many fixes & improvements have been done.


== Version 2.0.17 ==

  UPGRADE NOTE :
    - You should upgrade the version of Pillow to 7.1 (eg: pip install -U creme/requirements.txt ).
    - You should re-generate the media files (python manage.py generatemedia).

  Users side :
  ------------
    # A XSS issue in popover title has been fixed.
    # An issue with escaped characters in dialog title has been fixed.
    # An issue when removing a file with inner edition has been fixed (backported from 2.1)
    # Apps:
        * Billing :
            - When a billing document is created/edited, & the source has exactly one PaymentInformation, this one is automatically linked to the document.
            - When a PaymentInformation is created from a billing document, it is automatically linked to the document.